- Added System-properties panel - Added Log panel - Major refactorings

--- a/webapp/src/main/resources/templates/fragments/navbar.html
+++ b/webapp/src/main/resources/templates/fragments/navbar.html
@@ -13,7 +13,7 @@
 </head>
 <body  th:fragment="navbar" th:remove="tag">
 <nav  class="navbar navbar-expand-lg navbar-dark bg-dark" >
-    <a class="navbar-brand" href="#">WebApp</a>
+    <a class="navbar-brand" href="#">Web-Panel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,6 +28,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="h2-console">h2-console</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/log">log</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/system">system</a>
             </li>
 
         </ul>
