--- a/webapp/src/main/resources/templates/plugins.html
+++ b/webapp/src/main/resources/templates/plugins.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html" xmlns:tx="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <div th:replace="fragments/fragment :: fragment"></div>
     <title>WebPanel - Plugins</title>
